[package]
name = "gnm_benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ez-bitset = "0.1.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_pcg = "0.3.1"
rayon = "1.7.0"
serde = { version = "1.0.160", features = ["serde_derive"] }
serde_json = "1.0.96"
